# FeedbackSimulator

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  NOTES  README.md  cell_control
Testing/Temporary/: CTestCostData.txt
docs/: cell_control.bib  cell_control.pandoc  references
docs/Poster/: poster.tex  presentation.tex
src/: CMakeLists.txt  CTestTestfile.cmake  Channel.cpp  Channel.h  Module.cpp  Module.h  RandomVariable.cpp  RandomVariable.hpp  main.cpp
src/systemc-2.3/examples/sysc/2.3/sc_rvd/: sc_rvd.vcproj
src/systemc-2.3/examples/sysc/2.3/sc_ttd/: sc_ttd.vcproj
src/systemc-2.3/msvc71/SystemC/: SystemC.vcproj
tests/: test.py
